@@ -1,6 +1,8 @@
 Release 0.6.6 (in development)
 ==============================
 
+* Handle raw nodes in the ``text`` writer.
+
 * Fix a problem the Qt help project generated by the ``qthelp``
   builder that would lead to no content being displayed in the Qt
   Assistant.
